--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -59,7 +59,13 @@ import logo from "@images/Logo_Game25_Mono.svg";
       <ul class="flex flex-col gap-2">
         <li>Hugo Lorenzoni</li>
         <li>Alexandre Radelet</li>
-        <li>Guillaume Hinnekens</li>
+        <li>Lucy Bogaert</li>
+      </ul>
+
+      <h4 class="mb-3 mt-8 font-semibold uppercase">DéléGames</h4>
+      <ul class="flex flex-col gap-2">
+        <li>Théau Pauwels</li>
+        <li>Esteban Hannecart</li>
       </ul>
     </div>
     <div class="h-[2px] rounded-full bg-white md:hidden"></div>
