--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,16 +14,16 @@ import logo from "@images/Logo_Game25_Mono.svg";
     <div>
       <h4 class="mb-3 mt-0 font-semibold uppercase">Réseaux sociaux</h4>
       <ul class="flex flex-col gap-2">
-        <!-- TODO : Update quand l'évent Facebook sera sorti 
-         <li>
+        <!-- TODO : Update quand l'évent Facebook sera sorti  -->
+        <li>
           <a
             class="inline-flex items-center gap-2 underline duration-150 hover:translate-x-2 hover:opacity-80"
-            href="https://www.facebook.com/events/855822622960371"
+            href="https://www.facebook.com/events/2000290947160373"
           >
             <span class="size-6 fill-white"><Facebook /></span>
             Event Facebook Game 25
           </a>
-        </li> -->
+        </li>
         <li>
           <a
             class="inline-flex items-center gap-2 underline duration-150 hover:translate-x-2 hover:opacity-80"
