--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,11 @@ import logo from "@images/Logo_Game25_New_Colors.svg";
 const navItems = [
   { title: "Tournois", button: false, href: "#tournois" },
   { title: "Sponsors", button: false, href: "#sponsors" },
-  { title: "Infos pratiques", button: false, href: "#" },
+  {
+    title: "Infos pratiques",
+    button: false,
+    href: "https://www.facebook.com/events/2000290947160373",
+  },
   {
     title: "À propos de nous",
     button: false,
