fix: correct punctuation in event link description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -179,9 +179,8 @@ const sponsors = [
             href="https://www.facebook.com/events/2000290947160373"
             class="underline duration-150 hover:translate-x-2 hover:opacity-90"
           >
-            facebook de l'événement</a
+            facebook de l'événement.</a
           >
-          .
         </p>
       </div>
       <Image
