fix: improve phrasing in event information section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,12 +174,12 @@ const sponsors = [
           >.
         </p>
         <p class="">
-          Pour plus d'informations, rendez-vous sur la page{" "}
+          Pour plus d'informations, rendez-vous sur{" "}
           <a
             href="https://www.facebook.com/events/2000290947160373"
             class="underline duration-150 hover:translate-x-2 hover:opacity-90"
           >
-            facebook de l'événement.</a
+            la page facebook de l'événement.</a
           >
         </p>
       </div>
