fix: update sponsors section with new sponsors and improve layout

--- a/src/components/Sponsors.astro
+++ b/src/components/Sponsors.astro
@@ -11,28 +11,46 @@ type Props = {
 const { sponsors } = Astro.props;
 ---
 
-<div
-  class="max-w-full overflow-hidden [-webkit-mask:linear-gradient(90deg,transparent,white_20%,white_80%,transparent)] [mask:linear-gradient(90deg,transparent,white_20%,white_80%,transparent)]"
->
-  <ul
-    class="animate-infinite-scroll-left flex w-max gap-4 hover:[animation-play-state:paused]"
-  >
-    {
-      [...sponsors, ...sponsors].map((sponsor) => (
-        <a
-          href={sponsor.url}
-          class="grid grid-rows-[1fr_auto] items-center text-nowrap rounded-2xl border-4 border-orange-500 px-6 py-4 text-xl font-semibold"
-        >
-          <Image
-            class="w-48 object-scale-down"
-            src={sponsor.image}
-            alt={sponsor.name}
-            quality={50}
-            format="webp"
-          />
-          <h4>{sponsor.name}</h4>
-        </a>
-      ))
-    }
-  </ul>
-</div>
+{
+  sponsors.length < 5 ? (
+    <div class="max-w-full overflow-hidden">
+      <ul class="flex flex-wrap justify-center gap-4">
+        {sponsors.map((sponsor) => (
+          <a
+            href={sponsor.url}
+            class="grid grid-rows-[1fr_auto] items-center text-nowrap rounded-2xl border-4 border-orange-500 px-6 py-4 text-xl font-semibold"
+          >
+            <Image
+              class="w-48 object-scale-down"
+              src={sponsor.image}
+              alt={sponsor.name}
+              quality={50}
+              format="webp"
+            />
+            <h4>{sponsor.name}</h4>
+          </a>
+        ))}
+      </ul>
+    </div>
+  ) : (
+    <div class="max-w-full overflow-hidden [-webkit-mask:linear-gradient(90deg,transparent,white_20%,white_80%,transparent)] [mask:linear-gradient(90deg,transparent,white_20%,white_80%,transparent)]">
+      <ul class="flex w-max animate-infinite-scroll-left gap-4 hover:[animation-play-state:paused]">
+        {[...sponsors, ...sponsors].map((sponsor) => (
+          <a
+            href={sponsor.url}
+            class="grid grid-rows-[1fr_auto] items-center text-nowrap rounded-2xl border-4 border-orange-500 px-6 py-4 text-xl font-semibold"
+          >
+            <Image
+              class="w-48 object-scale-down"
+              src={sponsor.image}
+              alt={sponsor.name}
+              quality={50}
+              format="webp"
+            />
+            <h4>{sponsor.name}</h4>
+          </a>
+        ))}
+      </ul>
+    </div>
+  )
+}
