fix: update registration link and add new sponsors with images

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,7 +16,11 @@ const navItems = [
     button: false,
     href: "https://magellan.fpms.ac.be",
   },
-  { title: "S'incrire", button: true, href: "/inscription" },
+  {
+    title: "S'incrire",
+    button: true,
+    href: "https://forms.gle/aovyUxUzdpBo8mUN8",
+  },
 ];
 ---
 
