--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,8 @@ import Noctua from "@images/sponsors/noctua.png";
 import JustOneByte from "@images/sponsors/j1b.png";
 import ORE from "@images/sponsors/ore.png";
 import RomeoPizza from "@images/sponsors/romeopizza.png";
+import Necko from "@images/sponsors/necko.png";
+import DSWallonie from "@images/sponsors/dswallonie.jpg";
 
 const tournois = [
   {
@@ -78,6 +80,12 @@ const sponsors = [
     name: "ORE",
     url: "https://www.facebook.com/ORE.UMONS/",
     image: ORE,
+  },
+  { name: "Necko Technologies", url: "https://www.necko.tech/", image: Necko },
+  {
+    name: "DS Wallonie",
+    url: "https://www.dswallonie.be/fr/",
+    image: DSWallonie,
   },
 ];
 
