feat: add new sponsors Loca Copy and Les Buses with images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,8 @@ import ORE from "@images/sponsors/ore.png";
 import RomeoPizza from "@images/sponsors/romeopizza.png";
 import Necko from "@images/sponsors/necko.png";
 import DSWallonie from "@images/sponsors/dswallonie.jpg";
+import LocaCopy from "@images/sponsors/locacopy.png";
+import LesBuses from "@images/sponsors/yaya.png";
 
 const tournois = [
   {
@@ -66,10 +68,16 @@ const tournois = [
 ];
 
 const sponsors = [
+  { name: "Necko Technologies", url: "https://www.necko.tech/", image: Necko },
   {
-    name: "Noctua",
-    url: "https://noctua.at/fr/",
-    image: Noctua,
+    name: "DS Wallonie",
+    url: "https://www.dswallonie.be/fr/",
+    image: DSWallonie,
+  },
+  {
+    name: "Loca Copy",
+    url: "https://www.locacopy.be/",
+    image: LocaCopy,
   },
   {
     name: "Just One Byte",
@@ -81,11 +89,15 @@ const sponsors = [
     url: "https://www.facebook.com/ORE.UMONS/",
     image: ORE,
   },
-  { name: "Necko Technologies", url: "https://www.necko.tech/", image: Necko },
   {
-    name: "DS Wallonie",
-    url: "https://www.dswallonie.be/fr/",
-    image: DSWallonie,
+    name: "Noctua",
+    url: "https://noctua.at/fr/",
+    image: Noctua,
+  },
+  {
+    name: "Les Buses",
+    url: "#",
+    image: LesBuses,
   },
 ];
 
