Update: FC26 text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ const tournois = [
     image: FC26,
     background: FC26_BACKGROUND,
     description:
-      "xxx",
+      "Compétition à 16 avec matches de poules et phases finale. Montre le meilleur de toi même sur le terrain !",
     link: "https://forms.gle/u8tgex7kmPoprAwQA",
   },
 ];
@@ -135,21 +135,6 @@ const oldSponsors = [
     name: "Walga",
     url: "https://www.walga.be/",
     image: Walga,
-  },
-  {
-    name: "Noctua",
-    url: "https://noctua.at/fr/",
-    image: Noctua,
-  },
-  {
-    name: "Just One Byte",
-    url: "https://j1b.be/",
-    image: JustOneByte,
-  },
-  {
-    name: "ORE",
-    url: "https://www.facebook.com/ORE.UMONS/",
-    image: ORE,
   },
   {
     name: "Romeo pizza",
